# drowsy_detection

./: .gitignore  Instructions_for_Packaging_Drowsy_Detection.md  MANIFEST.in  README.md  log.md  pyproject.toml  test_input.json  test_result.json
.github/: SELF_HOSTED_RUNNER_SETUP.md
.github/workflows/: display-info.yml  evaluation-engine.yml  test.yml
00_requirements/: KPI.md
01_algorithm_specification/: AS_drowsy_detection.md
02_specific_design/: SD_drowsy_detection_python.md  implementation_summary.md
03_source/cli/: __init__.py  main.py
03_source/config/: __init__.py  validators.py
03_source/core/: drowsy_detector.py  eye_state.py  timer.py
03_source/utils/: logger.py
algorithm_specification/: AS_drowsy_detection.md  アルゴリズム仕様書について.md  連続閉眼検知アルゴリズム.md
evaluation_engine/: README.md  run_evaluation.py
examples/: README.md  basic_usage.py  video_processing.py
scripts/: display_info.py  get_commit_info.py
source/: __init__.py
source/config/: config.py
source/core/: __init__.py
source/utils/: __init__.py  data_processor.py
specific_design/: SD_drowsy_detection_python.md
src/drowsy_detection/: __init__.py
src/drowsy_detection/cli/: __init__.py  main.py
src/drowsy_detection/config/: __init__.py  config.py
src/drowsy_detection/core/: __init__.py  drowsy_detector.py
src/drowsy_detection/utils/: data_processor.py  logger.py
tests/: __init__.py  test_config.py  test_core.py  test_drowsy_detector.py  test_integration.py
